# BoatSimulation

./: .#tutorial2.frag  .gitignore  Boat.cpp  Boat.h  BoatHandler.cpp  BoatHandler.h  CMakeLists.txt  Makefile  Map.h  Shader.h  a.out  boatSimulator  imgui_impl_sdl.cpp  log.txt  main - Copy (2).cpp  main.cpp  test  tutorial2.frag  tutorial2.vert
include/: CSVParser.h  Map.h  Mesh.h  Renderer.h  Shader.h  Window.h
res/shaders/: pointToSquare.geom
src/: BoatHandler.cpp  CSVParser.cpp  Map.cpp  Mesh.cpp  Renderer.cpp  Window.cpp  imgui_demo.cpp  imgui_impl_sdl.cpp  main.cpp
