#cmake_minimum_required(VERSION 2.8.4)

#project(BoatSimulation)

#find_package(SDL2 CONFIG REQUIRED)
#find_library(SDL2_MAIN SDL2main)
#find_package(GLEW REQUIRED)
#find_package(glm CONFIG REQUIRED)
#find_package(OpenGL REQUIRED)

#link_directories("C:/vcpkg/installed/x86-windows/lib")
#link_directories("shapelib/build/dll/Debug")

#add_executable(BoatSimulation WIN32 main.cpp)

#include_directories(${OPENGL_INCLUDE_DIRS})
#arget_link_libraries(BoatSimulation shp)
#target_link_libraries(BoatSimulation ${OPENGL_LIBRARIES})

#target_link_libraries(BoatSimulation PRIVATE SDL2 ${SDL2_MAIN})
#target_link_libraries(BoatSimulation PRIVATE glew32)
#target_link_libraries(BoatSimulation PRIVATE glm)

